fix overflow blog issue

--- a/world-war-z/src/routes/Menu/menu.css
+++ b/world-war-z/src/routes/Menu/menu.css
@@ -55,3 +55,6 @@
   color: #f2f8fa;
   cursor: pointer;
 }
+#scroll {
+  overflow-y: auto;
+}
